# CodeReviewAITestTask

./: Dockerfile  Part 2 - What If.txt  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  redis_client.py
app/models/: review.py
app/services/: github.py  gpt.py
app/tests/: __init__.py  test_endpoints.py
