[tool.poetry]
name = "codereviewaitesttask"
version = "0.1.0"
description = ""
authors = ["rykovlad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
httpx = "^0.27.2"
pydantic = "^2.9.2"
openai = "^1.52.2"
uvicorn = "^0.32.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
